# static-json-builder

./: .gitignore  LICENSE  README.md  main.c  meson.build  meson_options.txt  static-json-builder.c  static-json-builder.h
.github/workflows/: health-check.yml  linux.yml  macos.yml  windows-mingw.yml  windows-msvc.yml
examples/: example-single-header.c  example.c  meson.build
lib/: meson.build  static-json-builder.c  static-json-builder.h
single-header/: static-json-builder.h
tests/: meson.build  static-json-builder-tests.c
